advanced features implemented
